--- a/carousel/Carousel.html
+++ b/carousel/Carousel.html
@@ -21,21 +21,21 @@
 <body>
 
   <ul id="looplogoslide" style="border-bottom: 1px solid #fff;">
-    <li><a href="https://gobernaciondecochabamba.bo/web/inicio"><img src="images/01_GADC.png" title="Gobernación de Cochabamba"/>
+    <li><a href="https://gobernaciondecochabamba.bo/web/inicio"target="_blank"><img src="images/01_GADC.png" title="Gobernación de Cochabamba"/>
       <a style="text-decoration:none;display:block;width:100%;height:100%;"></a></li>
-    <li><a href="https://defensacivil.gob.bo/web/"><img src="images/02_VIDECI.png" title="Viceministerios de Defensa Civil"/>
+    <li><a href="https://defensacivil.gob.bo/web/"target="_blank"><img src="images/02_VIDECI.png" title="Viceministerios de Defensa Civil"/>
       <a style="text-decoration:none;display:block;width:100%;height:100%;"></a></li>
-    <li><a href="https://abt.gob.bo/"><img src="images/03_ABT.png" title="Autoridad de Bosques y Tierras"/>
+    <li><a href="https://abt.gob.bo/"target="_blank"><img src="images/03_ABT.png" title="Autoridad de Bosques y Tierras"/>
       <a style="text-decoration:none;display:block;width:100%;height:100%;"></a></li>
-    <li><a href="https://www.tribunalagroambiental.bo/"><img src="images/04_Agroambiental.png" title="Tribunal Agroambiental"/>
+    <li><a href="https://www.tribunalagroambiental.bo/"target="_blank"><img src="images/04_Agroambiental.png" title="Tribunal Agroambiental"/>
       <a style="text-decoration:none;display:block;width:100%;height:100%;"></a></li>
-    <li><a href="https://www.sernap.gob.bo/"><img src="images/05_SERNAP.png" title="Servicio Nacional de Áreas Protegidas"/>
+    <li><a href="https://www.sernap.gob.bo/"target="_blank"><img src="images/05_SERNAP.png" title="Servicio Nacional de Áreas Protegidas"/>
       <a style="text-decoration:none;display:block;width:100%;height:100%;"></a></li>
-    <li><a href="https://www.umss.edu.bo/"><img src="images/06_UMSS.png" title="Universidad Mayor de San Simón"/>
+    <li><a href="https://www.umss.edu.bo/"target="_blank"><img src="images/06_UMSS.png" title="Universidad Mayor de San Simón"/>
       <a style="text-decoration:none;display:block;width:100%;height:100%;"></a></li>
-    <li><a href="https://senamhi.gob.bo/index.php/inicio"><img src="images/07_SENAMHI.png" title="Servicio Nacional de Meteorología e Hidrología"/>
+    <li><a href="https://senamhi.gob.bo/index.php/inicio"target="_blank"><img src="images/07_SENAMHI.png" title="Servicio Nacional de Meteorología e Hidrología"/>
       <a style="text-decoration:none;display:block;width:100%;height:100%;"></a></li>
-    <li><a href="http://www.amdeco.org.bo/"><img src="images/08_AMDECO.png" title="Asociación de Municipios de Cochabamba"/>
+    <li><a href="http://www.amdeco.org.bo/"target="_blank"><img src="images/08_AMDECO.png" title="Asociación de Municipios de Cochabamba"/>
       <a style="text-decoration:none;display:block;width:100%;height:100%;"></a></li>
       </ul>
 
